RESOLVED FIXED211439
"Essential Skeleton" does not respond to mouse events, only touch events
https://bugs.webkit.org/show_bug.cgi?id=211439
Summary "Essential Skeleton" does not respond to mouse events, only touch events
Tim Horton
Reported 2020-05-05 00:30:26 PDT
"Essential Skeleton" does not respond to mouse events, only touch events
Attachments
Patch (3.23 KB, patch)
2020-05-05 00:32 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-05-05 00:32:36 PDT
Tim Horton
Comment 2 2020-05-05 00:32:39 PDT
EWS
Comment 3 2020-05-05 10:10:47 PDT
Committed r261180: <https://trac.webkit.org/changeset/261180> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398485 [details].
Note You need to log in before you can comment on or make changes to this bug.