"Essential Skeleton" does not respond to mouse events, only touch events https://bugs.webkit.org/show_bug.cgi?id=211439 <rdar://problem/62694519>

Reviewed by Wenson Hsieh.

Source/WebCore:

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isEssentialSkeleton):

Source/WebKit:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView shouldUseMouseGestureRecognizer]):
Add a quirk.


Canonical link: https://commits.webkit.org/224353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261180 268f45cc-cd09-0410-ab3c-d52691b4dbfc